--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,25 +1,12 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+  font-family: "M PLUS 1P", sans-serif;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: #1a1a1a;
+  background-color: #FFFFFF;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -35,45 +22,40 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button, router-link, input, textarea {
+  background: none;
+  border: none;
+  outline: none;
+  font: inherit;
+  color: inherit;
+  text-align: inherit;
+  line-height: inherit;
 }
 
-.card {
-  padding: 2em;
+button {
+  cursor: pointer;
+  padding: 0.5em 1em;
+  border-radius: 6px;
+  background-color: #006aeb;
+  color: #FFFFFF;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+}
+/* button が使えない場合 */
+button:disabled {
+  cursor: default; 
+  background-color: #cccccc;
+  font-weight: bold;
+  color: #666666;
+}
+
+button:hover:not(:disabled) {
+  background-color: #0056b3;
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 360px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  /* text-align: center; */
 }
